Fixed Player contrast

--- a/src/renderer/modules/playerControls/playerControls.scss
+++ b/src/renderer/modules/playerControls/playerControls.scss
@@ -7,5 +7,13 @@
     display: flex;
     gap: 0.25em;
     justify-content: center;
+
+    > button {
+      fill: var(--light-3);
+
+      &:hover {
+        fill: var(--white);
+      }
+    }
   }
 }
