--- a/src/renderer/modules/playerSlider/playerSlider.scss
+++ b/src/renderer/modules/playerSlider/playerSlider.scss
@@ -6,5 +6,9 @@
     display: flex;
     align-items: center;
     gap: 0.5em;
+
+    > .Slider > .track {
+      background-color: var(--black-opaque);
+    }
   }
 }
